--- a/MGTV-Swift/XIB/Share/BaseView57.xib
+++ b/MGTV-Swift/XIB/Share/BaseView57.xib
@@ -1,19 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11201" systemVersion="16A323" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11762" systemVersion="16D32" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11161"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="BaseView57" customModule="MGTV_Swift" customModuleProvider="target">
             <connections>
+                <outlet property="baseImageView" destination="fHl-Lt-Bx3" id="X9T-oN-7Vq"/>
                 <outlet property="descLabel" destination="vqd-R4-luE" id="JCT-2W-FVz"/>
-                <outlet property="imageView" destination="BtQ-rG-kJH" id="xBe-Dw-SHD"/>
                 <outlet property="nameLabel" destination="roj-sW-knC" id="jvU-Ji-bT0"/>
-                <outlet property="rightCornerLabel" destination="NNu-Mt-xaF" id="zDv-v6-WhW"/>
-                <outlet property="updateLabel" destination="lXo-9H-CY4" id="W8m-XK-fzi"/>
                 <outlet property="view" destination="iN0-l3-epB" id="onn-jO-1bv"/>
             </connections>
         </placeholder>
@@ -22,69 +23,39 @@
             <rect key="frame" x="0.0" y="0.0" width="100" height="192"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="BtQ-rG-kJH">
-                    <color key="backgroundColor" red="0.87450980392156863" green="0.88235294117647056" blue="0.89803921568627454" alpha="1" colorSpace="calibratedRGB"/>
-                    <constraints>
-                        <constraint firstAttribute="width" secondItem="BtQ-rG-kJH" secondAttribute="height" multiplier="5:7" id="K9D-sl-Un0"/>
-                    </constraints>
-                </imageView>
-                <label clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="name label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="roj-sW-knC">
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="fHl-Lt-Bx3" customClass="BaseImageView" customModule="MGTV_Swift" customModuleProvider="target">
+                    <rect key="frame" x="0.0" y="0.0" width="100" height="140"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                    <color key="textColor" red="0.20000000000000001" green="0.20000000000000001" blue="0.20000000000000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    <constraints>
+                        <constraint firstAttribute="width" secondItem="fHl-Lt-Bx3" secondAttribute="height" multiplier="5:7" id="NXz-Ts-s2a"/>
+                    </constraints>
+                </view>
+                <label clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="name label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="roj-sW-knC">
+                    <rect key="frame" x="3" y="147" width="97" height="18"/>
+                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                    <color key="textColor" red="0.20000000000000001" green="0.20000000000000001" blue="0.20000000000000001" alpha="1" colorSpace="calibratedRGB"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <label clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="desc label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vqd-R4-luE">
+                    <rect key="frame" x="3" y="178.5" width="97" height="13.5"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     <fontDescription key="fontDescription" type="system" pointSize="11"/>
                     <color key="textColor" red="0.53333333333333333" green="0.53333333333333333" blue="0.53333333333333333" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="update label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lXo-9H-CY4" customClass="DesignLabel" customModule="MGTV_Swift" customModuleProvider="target">
-                    <fontDescription key="fontDescription" type="system" weight="medium" pointSize="10"/>
-                    <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                    <nil key="highlightedColor"/>
-                    <userDefinedRuntimeAttributes>
-                        <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
-                            <real key="value" value="2"/>
-                        </userDefinedRuntimeAttribute>
-                        <userDefinedRuntimeAttribute type="color" keyPath="layerColor">
-                            <color key="value" red="0.0" green="0.0" blue="0.0" alpha="0.59999999999999998" colorSpace="custom" customColorSpace="sRGB"/>
-                        </userDefinedRuntimeAttribute>
-                        <userDefinedRuntimeAttribute type="color" keyPath="borderColor">
-                            <color key="value" red="1" green="1" blue="1" alpha="0.29921874999999998" colorSpace="custom" customColorSpace="sRGB"/>
-                        </userDefinedRuntimeAttribute>
-                        <userDefinedRuntimeAttribute type="number" keyPath="borderWidth">
-                            <real key="value" value="0.5"/>
-                        </userDefinedRuntimeAttribute>
-                    </userDefinedRuntimeAttributes>
-                </label>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="right corner" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NNu-Mt-xaF" customClass="DesignLabel" customModule="MGTV_Swift" customModuleProvider="target">
-                    <fontDescription key="fontDescription" type="system" pointSize="10"/>
-                    <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                    <nil key="highlightedColor"/>
-                    <userDefinedRuntimeAttributes>
-                        <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
-                            <real key="value" value="2"/>
-                        </userDefinedRuntimeAttribute>
-                    </userDefinedRuntimeAttributes>
-                </label>
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
-                <constraint firstItem="vqd-R4-luE" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="0Dm-KJ-Gvu"/>
-                <constraint firstItem="NNu-Mt-xaF" firstAttribute="trailing" secondItem="BtQ-rG-kJH" secondAttribute="trailing" constant="-3" id="0jo-yf-gJY"/>
-                <constraint firstItem="roj-sW-knC" firstAttribute="top" secondItem="BtQ-rG-kJH" secondAttribute="bottom" constant="6" id="2yS-4I-wki"/>
-                <constraint firstItem="BtQ-rG-kJH" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="Cly-Tk-d3B"/>
-                <constraint firstItem="roj-sW-knC" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="EP6-vV-CcD"/>
-                <constraint firstAttribute="trailing" secondItem="BtQ-rG-kJH" secondAttribute="trailing" id="Tj7-LA-w8I"/>
-                <constraint firstAttribute="bottom" secondItem="vqd-R4-luE" secondAttribute="bottom" id="YZ9-Nj-bkw"/>
-                <constraint firstItem="BtQ-rG-kJH" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="aRJ-TY-Vpe"/>
-                <constraint firstAttribute="trailing" secondItem="roj-sW-knC" secondAttribute="trailing" id="aa2-q6-l3J"/>
-                <constraint firstAttribute="trailing" secondItem="vqd-R4-luE" secondAttribute="trailing" id="bXr-Fe-ISV"/>
-                <constraint firstItem="lXo-9H-CY4" firstAttribute="trailing" secondItem="BtQ-rG-kJH" secondAttribute="trailing" constant="-3" id="pra-b1-0l4"/>
-                <constraint firstItem="NNu-Mt-xaF" firstAttribute="top" secondItem="BtQ-rG-kJH" secondAttribute="top" constant="3" id="tBC-tF-lwL"/>
-                <constraint firstItem="lXo-9H-CY4" firstAttribute="bottom" secondItem="BtQ-rG-kJH" secondAttribute="bottom" constant="-3" id="vXf-n2-rUw"/>
+                <constraint firstAttribute="trailing" secondItem="roj-sW-knC" secondAttribute="trailing" id="0Pd-hh-EJL"/>
+                <constraint firstAttribute="trailing" secondItem="fHl-Lt-Bx3" secondAttribute="trailing" id="8KE-ga-8JX"/>
+                <constraint firstItem="fHl-Lt-Bx3" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="AnZ-Oq-jNj"/>
+                <constraint firstAttribute="trailing" secondItem="vqd-R4-luE" secondAttribute="trailing" id="Bei-c2-b0g"/>
+                <constraint firstItem="vqd-R4-luE" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="3" id="Qk9-mF-zbw"/>
+                <constraint firstItem="roj-sW-knC" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="3" id="ZNT-pK-08P"/>
+                <constraint firstItem="roj-sW-knC" firstAttribute="top" secondItem="fHl-Lt-Bx3" secondAttribute="bottom" constant="7" id="ZWc-c8-FHD"/>
+                <constraint firstAttribute="bottom" secondItem="vqd-R4-luE" secondAttribute="bottom" id="l48-D4-9fa"/>
+                <constraint firstItem="fHl-Lt-Bx3" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="z2K-j0-qug"/>
             </constraints>
             <nil key="simulatedStatusBarMetrics"/>
             <nil key="simulatedTopBarMetrics"/>
