--- a/MGTV-Swift/XIB/Template/CircleCollectionViewCell.xib
+++ b/MGTV-Swift/XIB/Template/CircleCollectionViewCell.xib
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11542" systemVersion="16B2555" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11762" systemVersion="16D32" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11524"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -26,7 +26,7 @@
                         </constraints>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vRX-MQ-Om0">
-                        <rect key="frame" x="67" y="77" width="33" height="16"/>
+                        <rect key="frame" x="67" y="79" width="33" height="16"/>
                         <fontDescription key="fontDescription" type="system" pointSize="13"/>
                         <color key="textColor" red="0.20000000000000001" green="0.20000000000000001" blue="0.20000000000000001" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
@@ -36,7 +36,7 @@
             <constraints>
                 <constraint firstItem="Zly-NV-Efx" firstAttribute="centerX" secondItem="gTV-IL-0wX" secondAttribute="centerX" id="grJ-IT-c1n"/>
                 <constraint firstItem="Zly-NV-Efx" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" constant="5" id="h3m-CJ-uoA"/>
-                <constraint firstItem="vRX-MQ-Om0" firstAttribute="top" secondItem="Zly-NV-Efx" secondAttribute="bottom" constant="7" id="hGj-ys-rbQ"/>
+                <constraint firstItem="vRX-MQ-Om0" firstAttribute="top" secondItem="Zly-NV-Efx" secondAttribute="bottom" constant="9" id="hGj-ys-rbQ"/>
                 <constraint firstItem="vRX-MQ-Om0" firstAttribute="centerX" secondItem="gTV-IL-0wX" secondAttribute="centerX" id="mqC-Ml-0Vh"/>
             </constraints>
             <size key="customSize" width="168" height="151"/>
