--- a/MGTV-Swift/XIB/Template/MoreLinkCell.xib
+++ b/MGTV-Swift/XIB/Template/MoreLinkCell.xib
@@ -1,8 +1,11 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11201" systemVersion="15G1004" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11762" systemVersion="16D32" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11161"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -12,43 +15,31 @@
             <rect key="frame" x="0.0" y="0.0" width="320" height="46"/>
             <autoresizingMask key="autoresizingMask"/>
             <tableViewCellContentView key="contentView" contentMode="center" tableViewCell="s5V-QB-YTt" id="Ig6-mz-GhF">
-                <frame key="frameInset" width="320" height="45"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="45"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <button contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="60Y-Jy-INs">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="46"/>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </button>
                     <label clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text=" " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fvC-rh-xaw">
+                        <rect key="frame" x="158.5" y="8" width="4" height="18"/>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
                         <color key="textColor" red="0.94117647058823528" green="0.37647058823529411" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <button contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="BLu-RP-NGA">
-                        <constraints>
-                            <constraint firstAttribute="height" constant="13" id="8EX-7l-c7A"/>
-                            <constraint firstAttribute="width" constant="13" id="EQQ-de-4y1"/>
-                        </constraints>
-                        <state key="normal" title="Button" image="moreinfo_orange_icon"/>
-                    </button>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="EvenMore_Right" translatesAutoresizingMaskIntoConstraints="NO" id="FXd-lg-Rxx">
+                        <rect key="frame" x="167.5" y="10.5" width="13" height="13"/>
+                    </imageView>
                 </subviews>
                 <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                 <constraints>
-                    <constraint firstItem="BLu-RP-NGA" firstAttribute="centerY" secondItem="Ig6-mz-GhF" secondAttribute="centerY" id="Lwf-f6-WRn"/>
-                    <constraint firstItem="fvC-rh-xaw" firstAttribute="top" secondItem="Ig6-mz-GhF" secondAttribute="top" constant="11" id="S7M-70-Lzg"/>
-                    <constraint firstItem="fvC-rh-xaw" firstAttribute="centerY" secondItem="Ig6-mz-GhF" secondAttribute="centerY" id="VYB-hl-lEp"/>
-                    <constraint firstItem="BLu-RP-NGA" firstAttribute="baseline" secondItem="fvC-rh-xaw" secondAttribute="baseline" constant="2" id="Von-kR-PjE"/>
-                    <constraint firstItem="BLu-RP-NGA" firstAttribute="centerY" secondItem="fvC-rh-xaw" secondAttribute="centerY" id="ZiZ-du-dK3"/>
-                    <constraint firstItem="BLu-RP-NGA" firstAttribute="leading" secondItem="fvC-rh-xaw" secondAttribute="trailing" constant="4" id="dwn-Bx-xuB"/>
-                    <constraint firstItem="fvC-rh-xaw" firstAttribute="centerX" secondItem="Ig6-mz-GhF" secondAttribute="centerX" id="zWl-y1-5X2"/>
+                    <constraint firstItem="fvC-rh-xaw" firstAttribute="centerX" secondItem="Ig6-mz-GhF" secondAttribute="centerX" id="8Io-7c-JaC"/>
+                    <constraint firstItem="FXd-lg-Rxx" firstAttribute="centerY" secondItem="fvC-rh-xaw" secondAttribute="centerY" id="bRE-vg-ow6"/>
+                    <constraint firstItem="fvC-rh-xaw" firstAttribute="centerY" secondItem="Ig6-mz-GhF" secondAttribute="centerY" constant="-6" id="z43-Lv-0il"/>
+                    <constraint firstItem="FXd-lg-Rxx" firstAttribute="leading" secondItem="fvC-rh-xaw" secondAttribute="trailing" constant="5" id="zyh-v3-jaI"/>
                 </constraints>
-                <variation key="default">
-                    <mask key="constraints">
-                        <exclude reference="Lwf-f6-WRn"/>
-                        <exclude reference="Von-kR-PjE"/>
-                        <exclude reference="VYB-hl-lEp"/>
-                    </mask>
-                </variation>
             </tableViewCellContentView>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
@@ -64,6 +55,6 @@
         </tableViewCell>
     </objects>
     <resources>
-        <image name="moreinfo_orange_icon" width="6" height="10"/>
+        <image name="EvenMore_Right" width="13" height="13"/>
     </resources>
 </document>
