--- a/MGTV-Swift/XIB/Template/OneTemplateCell.xib
+++ b/MGTV-Swift/XIB/Template/OneTemplateCell.xib
@@ -1,8 +1,11 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11201" systemVersion="15G1004" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11762" systemVersion="16D32" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11161"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -12,16 +15,17 @@
             <rect key="frame" x="0.0" y="0.0" width="320" height="257"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <frame key="frameInset" width="320" height="257"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="256"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="cYX-R3-zia" customClass="BaseView169" customModule="MGTV_Swift" customModuleProvider="target">
+                        <rect key="frame" x="3" y="5" width="314" height="234.5"/>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </view>
                 </subviews>
                 <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                 <constraints>
-                    <constraint firstAttribute="bottom" secondItem="cYX-R3-zia" secondAttribute="bottom" constant="7" id="1JK-87-GCR"/>
+                    <constraint firstAttribute="bottom" secondItem="cYX-R3-zia" secondAttribute="bottom" constant="17" id="1JK-87-GCR"/>
                     <constraint firstItem="cYX-R3-zia" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="3" id="QPI-Ay-N9u"/>
                     <constraint firstAttribute="trailing" secondItem="cYX-R3-zia" secondAttribute="trailing" constant="3" id="ROU-65-BP8"/>
                     <constraint firstItem="cYX-R3-zia" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="5" id="gWE-mQ-mz8"/>
